modified cheatsheets for java advanced features